--- a/package.xml
+++ b/package.xml
@@ -61,6 +61,7 @@
   <build_depend>tf2_eigen</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>assimp_devel</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
 
   <build_export_depend>roslib</build_export_depend>
   <build_export_depend>kdl_conversions</build_export_depend>
@@ -72,6 +73,7 @@
   <build_export_depend>urdf</build_export_depend>
   <build_export_depend>tf2_eigen</build_export_depend>
   <build_export_depend>assimp_devel</build_export_depend>
+  <build_export_depend>libpcl-all-dev</build_export_depend>
 
   <exec_depend>roslib</exec_depend>
   <exec_depend>kdl_conversions</exec_depend>
@@ -84,6 +86,7 @@
   <exec_depend>tf2_eigen</exec_depend>
   <exec_depend>cmake_modules</exec_depend>
   <exec_depend>assimp_devel</exec_depend>
+  <exec_depend>libpcl-all</exec_depend>
 
 
 
