--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,6 +206,17 @@ include_directories(
 set_target_properties(robot_collision_detection_node PROPERTIES COMPILER_FLAGS "${ASSIMP_CXX_FLAGS} ${ASSIMP_CFLAGS_OTHER}")
 set_target_properties(robot_collision_detection_node PROPERTIES LINK_FLAGS "${ASSIMP_LINK_FLAGS}")
 
+add_executable(robot_controller src/robot_control_main.cpp src/RobotController.cpp)
+add_dependencies(robot_controller ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(robot_controller
+        ${catkin_LIBRARIES}
+        ${orocos_kdl_LIBRARIES}
+        ${ASSIMP_LIBRARIES}
+        ${PCL_LIBRARIES}
+        )
+
+
+
 #############
 ## Install ##
 #############
