--- a/package.xml
+++ b/package.xml
@@ -59,6 +59,8 @@
   <build_depend>rospy</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>gazebo_msgs</build_depend>
+  <build_depend>gazebo_plugins</build_depend>
+
   <build_depend>urdf</build_depend>
   <build_depend>tf2_eigen</build_depend>
   <build_depend>cmake_modules</build_depend>
@@ -74,6 +76,8 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>tf2</build_export_depend>
   <build_export_depend>gazebo_msgs</build_export_depend>
+  <build_export_depend>gazebo_plugins</build_export_depend>
+
   <build_export_depend>urdf</build_export_depend>
   <build_export_depend>tf2_eigen</build_export_depend>
   <build_export_depend>assimp_devel</build_export_depend>
@@ -88,6 +92,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>gazebo_msgs</exec_depend>
+  <exec_depend>gazebo_plugins</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>tf2_eigen</exec_depend>
   <exec_depend>cmake_modules</exec_depend>
