added recalculated joint_states

--- a/config/config_collision_iiwa.yaml
+++ b/config/config_collision_iiwa.yaml
@@ -1,12 +1,16 @@
 robot_description_param: "/robot_description" 
-joint_states_topic:  "/new_joint_states"
+joint_states_topic:  "/fake_joint_states"
 base_frame: "iiwa_link_0"
 ee_frame: "iiwa_link_7"
 frequency: 10.0
 #sensors: [0, 3, 3, 3, 3, 3, 3, 3] #-1: None; 0: FTsensor; 1: Force_x; 4:Torque_x, ...
 sensors: [-1, 6, 6, 6, 6, 6, 6, 6] #-1: None; 0: FTsensor; 1: Force_x; 4:Torque_x, ...
 pf:
-  num_parts: 4000
-  search_alpha: 0.001 #aggressiveness of search
-  perc_new: 1.0 # (1-p) percentage of new particles
-  std_devs: [0.01, 0.01, 5.0, 50] #Transition,  pos, Force, K
+  num_parts: 10000
+  search_alpha: 0.002 #aggressiveness of search
+  perc_new: 0.99 # (1-p) percentage of new particles
+  std_devs: [0.0, 0.01, 5.0, 50] #Transition,  pos, Force, K
+  ranges:
+    n: [0, 7]
+    F: [0, 500]
+    K: [0, 1000]
