--- a/config/config_collision_iiwa.yaml
+++ b/config/config_collision_iiwa.yaml
@@ -1,17 +1,17 @@
 robot_description_param: "/robot_description" 
-joint_states_topic:  "/fake_joint_states"
+joint_states_topic:  "/new_joint_states"
 base_frame: "iiwa_link_0"
 ee_frame: "iiwa_link_7"
 frequency: 10.0
 #sensors: [0, 3, 3, 3, 3, 3, 3, 3] #-1: None; 0: FTsensor; 1: Force_x; 4:Torque_x, ...
 sensors: [-1, 6, 6, 6, 6, 6, 6, 6] #-1: None; 0: FTsensor; 1: Force_x; 4:Torque_x, ...
-sensor_noise: 0.05
+sensor_noise: 0.0
 pf:
   num_parts: 5000
-  search_alpha: 0.0005 #aggressiveness of search
-  perc_new: 0.95 # (1-p) percentage of new particles
-  std_devs: [0.01, 0.01, 5.0, 50] #Transition,  pos, Force, K
+  search_alpha: 0.03 #aggressiveness of search
+  perc_new: 0.9999 # (1-p) percentage of new particles
+  std_devs: [0.0, 0.04, 04.10, 50] #Transition,  pos, Force, K
   ranges:
-    n: [0, 7]
-    F: [0, 500]
-    K: [0, 1.0]
+    n: [5, 6]
+    F: [0, 50]
+    K: [5000, 5001]
